--- a/css/style.css
+++ b/css/style.css
@@ -573,6 +573,7 @@ h5 {
 
 .content-center__info {
   padding-top: 4px;
+  padding-bottom: 30px;
   width: 485px;
   max-width: 100%;
   display: inline-block;
@@ -713,6 +714,8 @@ h5 {
   right: -30px;
   padding: 5px;
   background: #fff;
+  -webkit-box-shadow: 3px 4px 5px rgba(0, 0, 0, 0.3);
+  box-shadow: 3px 4px 5px rgba(0, 0, 0, 0.3);
   overflow: hidden;
   -webkit-transform: scale(0);
   -ms-transform: scale(0);
@@ -747,6 +750,7 @@ h5 {
   overflow: hidden; }
   .nav-item-hover-img img {
     width: auto;
+    margin: 0 auto;
     max-width: none;
     height: 335px; }
 
@@ -872,7 +876,7 @@ h5 {
   .nav-item:nth-child(3n+1) .nav-item__hover-box {
     left: 0; } }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 600px) and (max-width: 1023px) {
   .nav-item:nth-child(2n) .nav-item__hover-box {
     right: 0; }
   .nav-item:nth-child(2n+1) .nav-item__hover-box {
@@ -897,7 +901,9 @@ h5 {
     line-height: 24px;
     margin-bottom: 15px; }
   .detail-page-slider {
-    width: 35%; } }
+    width: 35%; }
+  .container {
+    padding: 0 20px; } }
 
 @media screen and (max-width: 1023px) {
   .content-slider .swiper-button-prev {
